syntax = "proto3";

option csharp_namespace = "CatalogService.Grpc";

package catalog;

service CatalogGrpc {
  rpc GetItem (CatalogRequest) returns (CatalogResponse);
  rpc GetAllItems (Empty) returns (CatalogListResponse);
}

message CatalogRequest {
  int32 id = 1;
}

message CatalogResponse {
  int32 id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
}

message CatalogListResponse {
  repeated CatalogResponse items = 1;
}

message Empty {}
