syntax = "proto3";

option csharp_namespace = "ReviewsService.Grpc";

package reviews;

service ReviewsGrpc {
  rpc GetReview (ReviewRequest) returns (ReviewResponse);
  rpc GetAllReviews (Empty) returns (ReviewListResponse);
}

message ReviewRequest {
  int32 id = 1;
}

message ReviewResponse {
  int32 id = 1;
  int32 catalogItemId = 2;
  string author = 3;
  string content = 4;
  int32 rating = 5;
}

message ReviewListResponse {
  repeated ReviewResponse reviews = 1;
}

message Empty {}
